force-app/main/default/objects/Adresses__c/Adresses__c.object-meta.xml
<CustomObject>
    <label>Adresse</label>
    <nameField>
        <label>Nom de l&#39;adresse</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>