force-app/main/default/objects/Adresses__c/fields/Code_Postal_OLD__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_OLD__c</fullName>
    <label>Code Postal (OLD)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>