force-app/main/default/objects/Adresses__c/fields/Depose_resultat__c.field-meta.xml
<CustomField>
    <fullName>Depose_resultat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dépose du résultat à</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adresses (Dépose résultat à)</relationshipLabel>
    <relationshipName>Adresses2</relationshipName>
    <type>Lookup</type>
</CustomField>