force-app/main/default/objects/Adresses__c/fields/Heure_de_fermeture_de_l_adresse__c.field-meta.xml
<CustomField>
    <fullName>Heure_de_fermeture_de_l_adresse__c</fullName>
    <label>Heure de fermeture de l&#39;adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>