force-app/main/default/objects/Adresses__c/fields/Id_externe_adresse__c.field-meta.xml
<CustomField>
    <fullName>Id_externe_adresse__c</fullName>
    <externalId>true</externalId>
    <label>Id externe adresse</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>