force-app/main/default/objects/Adresses__c/fields/Mot_de_passe_site_Biologistic__c.field-meta.xml
<CustomField>
    <fullName>Mot_de_passe_site_Biologistic__c</fullName>
    <label>Mot de passe site Biologistic</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>