force-app/main/default/objects/Adresses__c/fields/N_de_compte_qui_a_motiv_la_creation__c.field-meta.xml
<CustomField>
    <fullName>N_de_compte_qui_a_motiv_la_creation__c</fullName>
    <label>N° de compte qui a motivé la création</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>