force-app/main/default/objects/Adresses__c/fields/Nom_service__c.field-meta.xml
<CustomField>
    <fullName>Nom_service__c</fullName>
    <inlineHelpText>Merci de l&#39;indiquer si le service est différent de celui du client de rattachement</inlineHelpText>
    <label>Nom service</label>
    <length>36</length>
    <type>Text</type>
</CustomField>