force-app/main/default/objects/Adresses__c/fields/Precision_adresse__c.field-meta.xml
<CustomField>
    <fullName>Precision_adresse__c</fullName>
    <label>Précision adresse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>