force-app/main/default/objects/Adresses__c/fields/Rue_1__c.field-meta.xml
<CustomField>
    <fullName>Rue_1__c</fullName>
    <label>Rue 1</label>
    <length>36</length>
    <type>Text</type>
</CustomField>