force-app/main/default/objects/Adresses__c/fields/Rue_3__c.field-meta.xml
<CustomField>
    <fullName>Rue_3__c</fullName>
    <label>Rue 3</label>
    <length>36</length>
    <type>Text</type>
</CustomField>