force-app/main/default/objects/Adresses__c/fields/Telephone_de_contact_de_l_adresse__c.field-meta.xml
<CustomField>
    <fullName>Telephone_de_contact_de_l_adresse__c</fullName>
    <label>Téléphone de contact de l&#39;adresse</label>
    <length>20</length>
    <type>Text</type>
</CustomField>