force-app/main/default/objects/Adresses__c/recordTypes/Adresse_Inactive.recordType-meta.xml
<RecordType>
    <fullName>Adresse_Inactive</fullName>
    <active>true</active>
    <label>Adresse Inactive</label>
</RecordType>