force-app/main/default/objects/Adresses__c/validationRules/RV_VISEO_CantCreateAdresses.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_VISEO_CantCreateAdresses</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $User.LastName != &#39;Lewandowski&#39;,
    ISNEW()
)</errorConditionFormula>
    <errorMessage>La création d&#39;adresse est temporairement impossible, veuillez contacter votre administrateur.</errorMessage>
</ValidationRule>